--- a/blog/views/blogs/new.ejs
+++ b/blog/views/blogs/new.ejs
@@ -10,10 +10,10 @@
 
             <form action="/blogs" method="POST">
 
-                <div class="mb-3">
+                <!-- <div class="mb-3">
                     <label for="name" class="form-label"> Name: </label>
                     <input type="text" class="form-control" name="name" id="name" placeholder="Creator Name">
-                </div>
+                </div> -->
 
                 <div class="mb-3">
                     <label for="topic" class="form-label"> Topic: </label>
