--- a/blog/views/partials/navbar.ejs
+++ b/blog/views/partials/navbar.ejs
@@ -1,24 +1,35 @@
 <nav class="navbar fixed-top navbar-expand-lg navbar-light">
-    <div class="container">
-        <a class="navbar-brand" href="#"> Blog </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+  <div class="container">
+    <a class="navbar-brand" href="#"> Blog </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="/blogs">Blogs</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="/blogs/new"> New </a>
+        </li>
+      </ul>
+      <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
+        <% if(!currentUser) { %> 
           <li class="nav-item">
-            <a class="nav-link active" href="#">Home</a>
+            <a class="nav-link" href="/register">Sign up</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="/blogs">Blogs</a>
+            <a class="nav-link" href="/login"> Login </a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="/blogs/new"> New </a>
-          </li>
-        </ul>
-
-        <!-- <i class="fas fa-user-circle"></i> -->
-
-      </div>
+          <% } else { %> 
+            <li class="nav-item">
+              <a class="nav-link" href="/logout"> LogOut </a>
+            </li>
+          <% } %> 
+      </ul>
     </div>
+  </div>
 </nav>
